altera botão de contribuição da home

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section class="contribuir">
     <h2>Como contribuir</h2>
     <p>Ideias, tutoriais ou mesmo histórias de "gambiarras" que podem ajudar a comunidade?</p>
-    <button>Envie Seu Conteúdo</button>
+    <a href="#" class="btn btn-info">Envie Seu conteúdo</a>
   </section>
 
 </div>
