altera limite de caracteres do resumo de posts na home

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
---- 
-layout: default 
----
+--- layout: default ---
 
 <div class="home">
 
@@ -37,7 +35,7 @@ layout: default
 
             <div class="panel-body">
               <!-- <h3 class="panel-title pull-left">{{ post.title | truncate: 25 }}</h3><span class="post-meta pull-right"><small>{{ post.date | date: "%b %-d, %Y" }}</small></span> -->
-              <h3 class="panel-title pull-left">{{ post.title | truncate: 25 }}</h3><span class="post-meta pull-right"></span>
+              <h3 class="panel-title pull-left">{{ post.title | truncate: 200 }}</h3><span class="post-meta pull-right"></span>
             </div>
 
             <div class="panel-body"><small>
