--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
---- layout: default ---
+---
+layout: default
+---
 
 <div class="home">
 
@@ -35,7 +37,7 @@
 
             <div class="panel-body">
               <!-- <h3 class="panel-title pull-left">{{ post.title | truncate: 25 }}</h3><span class="post-meta pull-right"><small>{{ post.date | date: "%b %-d, %Y" }}</small></span> -->
-              <h3 class="panel-title pull-left">{{ post.title | truncate: 200 }}</h3><span class="post-meta pull-right"></span>
+              <h3 class="panel-title pull-left">{{ post.title }}</h3><span class="post-meta pull-right"></span>
             </div>
 
             <div class="panel-body"><small>
