melhora espaçamento da home e corrige parágrafo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
   </section>
   <section class="conteudo">
     <h2>Conteúdo</h2>
-    Galeria com quadrados dedicados a cada assunto a serem abordados
+    <p>Assuntos a serem abordados</p>
     <div class="row pack">
 
       {% for post in paginator.posts %}
@@ -78,7 +78,7 @@ layout: default
       <div class="col-md-4"> </div>
     </div>
   </section>
-  <section class="contribuir">
+  <section class="contribuir" stle="margin-bottom: 2em;">
     <h2>Como contribuir</h2>
     <p>Ideias, tutoriais ou mesmo histórias de "gambiarras" que podem ajudar a comunidade?</p>
     <a href="#" class="btn btn-info">Envie Seu conteúdo</a>
