conserta espaçamento da seção 'contribua'

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
       <div class="col-md-4"> </div>
     </div>
   </section>
-  <section class="contribuir" stle="margin-bottom: 2em;">
+  <section class="contribuir" style="margin-bottom: 2em;">
     <h2>Como contribuir</h2>
     <p>Ideias, tutoriais ou mesmo histórias de "gambiarras" que podem ajudar a comunidade?</p>
     <a href="#" class="btn btn-info">Envie Seu conteúdo</a>
