--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ layout: default
     <a href="#" class="btn btn-info">Envie Seu conteúdo</a>
   </section>
   <section class="conteudo">
-    <h2>Conteúdo</h2>
-    <p>Assuntos a serem abordados</p>
+    <h2>Categorias</h2>
+    <p></p>
     <div class="row pack">
 
       {% for post in paginator.posts %}
