adiciona experimentos com formulário de contato

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
   <section class="contribuir" style="margin-bottom: 2em;">
     <h2>Como contribuir</h2>
     <p>Ideias, tutoriais ou mesmo histórias de "gambiarras" que podem ajudar a comunidade?</p>
-    <a href="#" class="btn btn-info">Envie Seu conteúdo</a>
+    <a href="/contato/" class="btn btn-info">Envie Seu conteúdo</a>
   </section>
   <section class="conteudo">
     <h2>Categorias</h2>
