Revert "conserta estilos básicos"
This reverts commit 19d783400584170d5a1137ee49cf5411779a58b4.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="home">
+
   <section class="sobre">
     <h2>O que é esse site?</h2>
     <p>Nossa proposta é construir uma rede virtual colaborativa de Coleções Zoológicas Brasileiras. Esse site pretende agregar e divulgar informações, boas práticas e protocolos que se relacionem à Informática para a Biodiversidade, Curadoria e Gerenciamento
@@ -26,7 +27,7 @@ layout: default
     <a href="/contato/" class="btn btn-info">Envie Seu conteúdo</a>
   </section>
   <section class="conteudo">
-    <h2>Categorias de Conteúdo</h2>
+    <h2>Categorias</h2>
     <p></p>
     <div class="row pack">
 
