--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@ layout: default
 <div class="home">
 
   <section class="sobre">
-    <h2>O que é esse site?</h2>
-    <p>Nossa proposta é construir uma rede virtual colaborativa de Coleções Zoológicas Brasileiras. Esse site pretende agregar e divulgar informações, boas práticas e protocolos que se relacionem à Informática para a Biodiversidade, Curadoria e Gerenciamento
-      de Coleções Biológicas, Digitalização/Informatização de exemplares biológicos e pesquisa em Sistemática Zoológica.</p>
+    <h2>O que é este site?</h2>
+    <p>Nossa proposta é construir uma rede virtual colaborativa para troca de informações entre coleções zoológicas brasileiras. Este site pretende agregar e divulgar informações, boas práticas e protocolos que se relacionem a Informática para a Biodiversidade, Curadoria e Gerenciamento de Coleções Biológicas, Digitalização/Informatização de exemplares biológicos e pesquisa em Sistemática Zoológica.</p>
     <p>Percebemos a necessidade de aumentar a comunicação dentro da comunidade associada às coleções zoológicas, incluindo curadores, técnicos, pesquisadores, estudantes, voluntários e outros interessados. Apesar de existirem diversas referências sobre o
       assunto em inglês, há uma grande necessidade de adaptar os protocolos à realidade das coleções brasileiras, além de que a língua inglesa não é sempre acessível a todos.</p>
     <p>Embora fóruns online e listas de e-mail tenham permitido uma troca relativamente rápida de informações e experiências, e algumas técnicas tenham sido publicadas esparsamente como artigos em revistas científicas, um repositório como esse permite organizar
@@ -24,7 +23,7 @@ layout: default
   <section class="contribuir" style="margin-bottom: 2em;">
     <h2>Como contribuir</h2>
     <p>Ideias, tutoriais ou mesmo histórias de "gambiarras" que podem ajudar a comunidade?</p>
-    <a href="/contato/" class="btn btn-info">Envie Seu conteúdo</a>
+    <a href="/contato/" class="btn btn-info">Envie seu conteúdo</a>
   </section>
   <section class="conteudo">
     <h2>Categorias</h2>
